--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
+    "express": "^4.18.2",
     "leaflet": "1.9.4",
     "lucide-react": "^0.554.0",
     "onnxruntime-web": "^1.19.0",
@@ -22,10 +22,12 @@
     "react-dom": "^19.2.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "uuid": "^13.0.0"
+    "uuid": "^11.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.0",
     "tsx": "^4.21.0",
     "typescript": "~5.8.2",
