--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^4.18.2",
+        "express-rate-limit": "^8.2.1",
+        "helmet": "^8.1.0",
         "html2canvas": "^1.4.1",
         "jspdf": "^3.0.4",
         "leaflet": "1.9.4",
